--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1164,6 +1164,11 @@ video {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
+.text-slate-50 {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1182,6 +1187,10 @@ video {
 
 .opacity-40 {
   opacity: 0.4;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-lg {
