use grid layout on manage page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1431,6 +1431,10 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row{
   flex-direction: row;
 }
@@ -2280,6 +2284,10 @@ video {
     flex-direction: row-reverse;
   }
 
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
   .md\:justify-center{
     justify-content: center;
   }
@@ -2343,6 +2351,11 @@ video {
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
